# llm-for-code-recommendation

./: .gitignore  README.md  bias.ipynb  main.py  mdr_gen_bigvul_fixes.ipynb  preprocessing.py  pyproject.toml  script.ipynb
code-chunking/: chunking.py
data/: cvefixes_split_stats.txt
eval/: ref metrics.ipynb
evaluation criteria/: evaluation-steps.txt  justification.md  rubrics.md
output/: evaluation.csv  fixes.csv  llama3.1_mdr_bigvul_bias.csv  recommendations.csv
patterns/metadata-driven-retrieval/: readme.md  script.ipynb
patterns/metadata-embedding/: readme.md  script.ipynb
patterns/segmented-context/: readme.md  script.ipynb
patterns/vanilla/: readme.md  script.ipynb
prompts/: code-fix-prompt.txt  recommendation-prompt.txt  vul-extraction-prompt.txt
